fix: nav spacing

--- a/frontend/main.css
+++ b/frontend/main.css
@@ -114,7 +114,8 @@ header h1 img {
     font-size: 1rem;
   }
   .nav {
-    padding-top: 30px;
+    margin-top: 30px;
+    padding-top: 20px;
     border-top: 1px solid #d8d7d6;
     width: 100%;
   }
